sandc/test/fixtures/astRegression/shouldFail/productions/isExpression/List.sand
pub class List {
    foo() {
        x() is Foo[+]
    }
}